# github-sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  demo.py  generate_report.md  main.py  pyproject.toml
src/github_sentinel/: __init__.py
src/github_sentinel/cli/: __init__.py  commands.py
src/github_sentinel/core/: __init__.py  config.py  exceptions.py  models.py
src/github_sentinel/database/: __init__.py  connection.py  repositories.py
src/github_sentinel/services/: __init__.py  github_service.py  notification_service.py  report_service.py  scheduler_service.py  subscription_service.py
src/github_sentinel/utils/: __init__.py  helpers.py  logger.py
